adminPage fix more function